--- a/ams-backend/views/index.pug
+++ b/ams-backend/views/index.pug
@@ -3,6 +3,8 @@ extends layout
 block content
   h1= title
   p Welcome to Adaptive Media Streaming Reporting System
+
+  
   
   ul
   each val, index in metrics
@@ -18,4 +20,25 @@ block content
         each val, i in metrics
             tr
                td= val.id 
-               td= val.name      
+               td= val.name    
+
+
+
+
+    <canvas id="myChart" width="100" height="100"></canvas>
+
+block script
+  script.  
+    var ctx = document.getElementById('myChart').getContext('2d');
+    var chart = new Chart(ctx, {
+        type: 'line',
+        data: {
+        labels: ["January", "February", "March", "April", "May", "June", "July"],
+        datasets: [{
+            label: "My First dataset",
+            backgroundColor: 'rgb(255, 99, 132)',
+            borderColor: 'rgb(255, 99, 132)',
+            data: [0, 10, 5, 2, 20, 30, 45],
+            }]
+            }
+            });
