--- a/ams-backend/views/layout.pug
+++ b/ams-backend/views/layout.pug
@@ -3,5 +3,10 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    
   body
     block content
+    
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js')
+
+    block script
