--- a/ams-backend/views/index.pug
+++ b/ams-backend/views/index.pug
@@ -5,40 +5,63 @@ block content
   p Welcome to Adaptive Media Streaming Reporting System
 
   
-  
-  ul
-  each val, index in metrics
-     each val1, index1 in val
-        li= index1 + ': ' + val1
+  -var session = [] 
+ 
+  each val, i in playback_delays
+      -session.push(val.session_id) 
 
-  table(border='1')
+  table(border='1' width='100%')
     thead 
          tr
-            th id
-            th Name
+            th Session ID
+            th Playback Delay
     tbody
-        each val, i in metrics
+        each val, i in playback_delays
             tr
-               td= val.id 
-               td= val.name    
+               td= val.session_id 
+               td= val.value    
 
 
 
-
-    <canvas id="myChart" width="100" height="100"></canvas>
+  #container
+    <canvas id="myChart" width="50" height="50"></canvas>
 
 block script
   script.  
-    var ctx = document.getElementById('myChart').getContext('2d');
-    var chart = new Chart(ctx, {
-        type: 'line',
-        data: {
-        labels: ["January", "February", "March", "April", "May", "June", "July"],
-        datasets: [{
-            label: "My First dataset",
-            backgroundColor: 'rgb(255, 99, 132)',
-            borderColor: 'rgb(255, 99, 132)',
-            data: [0, 10, 5, 2, 20, 30, 45],
-            }]
-            }
-            });
+        var ctx = document.getElementById("myChart");
+        var myChart = new Chart(ctx, {
+          type: 'bar',
+          data: {
+              labels: !{session_vals},
+              datasets: [{
+                  label: '# Playback Delay (ms)',
+                  data: !{playback_delay_time},
+                  backgroundColor: [
+                      'rgba(255, 99, 132, 0.2)',
+                      'rgba(54, 162, 235, 0.2)',
+                      'rgba(255, 206, 86, 0.2)',
+                      'rgba(75, 192, 192, 0.2)',
+                      'rgba(153, 102, 255, 0.2)',
+                      'rgba(255, 159, 64, 0.2)'
+                  ],
+                  borderColor: [
+                      'rgba(255,99,132,1)',
+                      'rgba(54, 162, 235, 1)',
+                      'rgba(255, 206, 86, 1)',
+                      'rgba(75, 192, 192, 1)',
+                      'rgba(153, 102, 255, 1)',
+                      'rgba(255, 159, 64, 1)'
+                  ],
+                  borderWidth: 1
+              }]
+          },
+          options: {
+              scales: {
+                  yAxes: [{
+                      ticks: {
+                          beginAtZero:true
+                      }
+                  }]
+              }
+          }
+      });
