--- a/ams-backend/views/layout.pug
+++ b/ams-backend/views/layout.pug
@@ -7,6 +7,6 @@ html
   body
     block content
     
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js')
+    script(src='/javascripts/Chart.js')
 
     block script
