memory usage added

--- a/ams-backend/views/index.pug
+++ b/ams-backend/views/index.pug
@@ -4,8 +4,8 @@ block content
   h1= title
   p Welcome to Adaptive Media Streaming Reporting System
 
-  p Last Test ID:
-  p Test Iterations:
+  p Last Test ID: 1
+  p Test Iterations: 3
 
 
   p Metric Results: Manifest Delays
