--- a/ams-backend/views/index.pug
+++ b/ams-backend/views/index.pug
@@ -180,22 +180,8 @@ block script
               datasets: [{
                   label: '# Manifest Delay (ms)',
                   data: !{manifest_delay_graph},
-                  backgroundColor: [
-                      'rgba(255, 99, 132, 0.2)',
-                      'rgba(54, 162, 235, 0.2)',
-                      'rgba(255, 206, 86, 0.2)',
-                      'rgba(75, 192, 192, 0.2)',
-                      'rgba(153, 102, 255, 0.2)',
-                      'rgba(255, 159, 64, 0.2)'
-                  ],
-                  borderColor: [
-                      'rgba(255,99,132,1)',
-                      'rgba(54, 162, 235, 1)',
-                      'rgba(255, 206, 86, 1)',
-                      'rgba(75, 192, 192, 1)',
-                      'rgba(153, 102, 255, 1)',
-                      'rgba(255, 159, 64, 1)'
-                  ],
+                  backgroundColor:'rgba(255, 99, 132, 0.2)',
+                  borderColor: 'rgba(255,99,132,1)',
                   borderWidth: 1
               }]
           },
@@ -216,22 +202,8 @@ block script
               datasets: [{
                   label: '# Playback Delay (ms)',
                   data: !{playback_delay_graph},
-                  backgroundColor: [
-                      'rgba(255, 99, 132, 0.2)',
-                      'rgba(54, 162, 235, 0.2)',
-                      'rgba(255, 206, 86, 0.2)',
-                      'rgba(75, 192, 192, 0.2)',
-                      'rgba(153, 102, 255, 0.2)',
-                      'rgba(255, 159, 64, 0.2)'
-                  ],
-                  borderColor: [
-                      'rgba(255,99,132,1)',
-                      'rgba(54, 162, 235, 1)',
-                      'rgba(255, 206, 86, 1)',
-                      'rgba(75, 192, 192, 1)',
-                      'rgba(153, 102, 255, 1)',
-                      'rgba(255, 159, 64, 1)'
-                  ],
+                  borderColor: 'rgba(255,99,132,1)',
+                  backgroundColor:'rgba(255, 99, 132, 0.2)',
                   borderWidth: 1
               }]
           },
@@ -253,22 +225,8 @@ block script
               datasets: [{
                   label: '# Dropped Frames ',
                   data: !{dropped_frames_graph},
-                  backgroundColor: [
-                      'rgba(255, 99, 132, 0.2)',
-                      'rgba(54, 162, 235, 0.2)',
-                      'rgba(255, 206, 86, 0.2)',
-                      'rgba(75, 192, 192, 0.2)',
-                      'rgba(153, 102, 255, 0.2)',
-                      'rgba(255, 159, 64, 0.2)'
-                  ],
-                  borderColor: [
-                      'rgba(255,99,132,1)',
-                      'rgba(54, 162, 235, 1)',
-                      'rgba(255, 206, 86, 1)',
-                      'rgba(75, 192, 192, 1)',
-                      'rgba(153, 102, 255, 1)',
-                      'rgba(255, 159, 64, 1)'
-                  ],
+                  backgroundColor:'rgba(255, 99, 132, 0.2)',
+                  borderColor: 'rgba(255,99,132,1)',
                   borderWidth: 1
               }]
           },
@@ -289,22 +247,8 @@ block script
               datasets: [{
                   label: '# Stream Initialization Delays (ms) ',
                   data: !{stream_initialization_graph},
-                  backgroundColor: [
-                      'rgba(255, 99, 132, 0.2)',
-                      'rgba(54, 162, 235, 0.2)',
-                      'rgba(255, 206, 86, 0.2)',
-                      'rgba(75, 192, 192, 0.2)',
-                      'rgba(153, 102, 255, 0.2)',
-                      'rgba(255, 159, 64, 0.2)'
-                  ],
-                  borderColor: [
-                      'rgba(255,99,132,1)',
-                      'rgba(54, 162, 235, 1)',
-                      'rgba(255, 206, 86, 1)',
-                      'rgba(75, 192, 192, 1)',
-                      'rgba(153, 102, 255, 1)',
-                      'rgba(255, 159, 64, 1)'
-                  ],
+                  backgroundColor:'rgba(255, 99, 132, 0.2)',
+                  borderColor: 'rgba  (255,99,132,1)',
                   borderWidth: 1
               }]
           },
@@ -325,22 +269,8 @@ block script
               datasets: [{
                   label: '# Quality Change Delays (ms) ',
                   data: !{qulity_change_graph},
-                  backgroundColor: [
-                      'rgba(255, 99, 132, 0.2)',
-                      'rgba(54, 162, 235, 0.2)',
-                      'rgba(255, 206, 86, 0.2)',
-                      'rgba(75, 192, 192, 0.2)',
-                      'rgba(153, 102, 255, 0.2)',
-                      'rgba(255, 159, 64, 0.2)'
-                  ],
-                  borderColor: [
-                      'rgba(255,99,132,1)',
-                      'rgba(54, 162, 235, 1)',
-                      'rgba(255, 206, 86, 1)',
-                      'rgba(75, 192, 192, 1)',
-                      'rgba(153, 102, 255, 1)',
-                      'rgba(255, 159, 64, 1)'
-                  ],
+                  backgroundColor:'rgba(255, 99, 132, 0.2)',
+                  borderColor: 'rgba(255,99,132,1)',
                   borderWidth: 1
               }]
           },
@@ -361,22 +291,8 @@ block script
               datasets: [{
                   label: '# PlayBack Seeking Delays (ms) ',
                   data: !{playback_seeking_graph},
-                  backgroundColor: [
-                      'rgba(255, 99, 132, 0.2)',
-                      'rgba(54, 162, 235, 0.2)',
-                      'rgba(255, 206, 86, 0.2)',
-                      'rgba(75, 192, 192, 0.2)',
-                      'rgba(153, 102, 255, 0.2)',
-                      'rgba(255, 159, 64, 0.2)'
-                  ],
-                  borderColor: [
-                      'rgba(255,99,132,1)',
-                      'rgba(54, 162, 235, 1)',
-                      'rgba(255, 206, 86, 1)',
-                      'rgba(75, 192, 192, 1)',
-                      'rgba(153, 102, 255, 1)',
-                      'rgba(255, 159, 64, 1)'
-                  ],
+                  backgroundColor:'rgba(255, 99, 132, 0.2)',
+                  borderColor: 'rgba(255,99,132,1)',
                   borderWidth: 1
               }]
           },
@@ -397,22 +313,8 @@ block script
               datasets: [{
                   label: '# Buffer Stable Time (ms) ',
                   data: !{buffer_stable_time_graph},
-                  backgroundColor: [
-                      'rgba(255, 99, 132, 0.2)',
-                      'rgba(54, 162, 235, 0.2)',
-                      'rgba(255, 206, 86, 0.2)',
-                      'rgba(75, 192, 192, 0.2)',
-                      'rgba(153, 102, 255, 0.2)',
-                      'rgba(255, 159, 64, 0.2)'
-                  ],
-                  borderColor: [
-                      'rgba(255,99,132,1)',
-                      'rgba(54, 162, 235, 1)',
-                      'rgba(255, 206, 86, 1)',
-                      'rgba(75, 192, 192, 1)',
-                      'rgba(153, 102, 255, 1)',
-                      'rgba(255, 159, 64, 1)'
-                  ],
+                  backgroundColor:'rgba(255, 99, 132, 0.2)',
+                  borderColor: 'rgba(255,99,132,1)',
                   borderWidth: 1
               }]
           },
@@ -432,22 +334,8 @@ block script
               datasets: [{
                   label: '# Playback Rate (ms) ',
                   data: !{playback_rate_graph},
-                  backgroundColor: [
-                      'rgba(255, 99, 132, 0.2)',
-                      'rgba(54, 162, 235, 0.2)',
-                      'rgba(255, 206, 86, 0.2)',
-                      'rgba(75, 192, 192, 0.2)',
-                      'rgba(153, 102, 255, 0.2)',
-                      'rgba(255, 159, 64, 0.2)'
-                  ],
-                  borderColor: [
-                      'rgba(255,99,132,1)',
-                      'rgba(54, 162, 235, 1)',
-                      'rgba(255, 206, 86, 1)',
-                      'rgba(75, 192, 192, 1)',
-                      'rgba(153, 102, 255, 1)',
-                      'rgba(255, 159, 64, 1)'
-                  ],
+                  backgroundColor:'rgba(255, 99, 132, 0.2)',
+                  borderColor: 'rgba(255,99,132,1)',
                   borderWidth: 1
               }]
           },
@@ -467,22 +355,8 @@ block script
               datasets: [{
                   label: '# Buffer Level ',
                   data: !{buffer_level_avg_graph},
-                  backgroundColor: [
-                      'rgba(255, 99, 132, 0.2)',
-                      'rgba(54, 162, 235, 0.2)',
-                      'rgba(255, 206, 86, 0.2)',
-                      'rgba(75, 192, 192, 0.2)',
-                      'rgba(153, 102, 255, 0.2)',
-                      'rgba(255, 159, 64, 0.2)'
-                  ],
-                  borderColor: [
-                      'rgba(255,99,132,1)',
-                      'rgba(54, 162, 235, 1)',
-                      'rgba(255, 206, 86, 1)',
-                      'rgba(75, 192, 192, 1)',
-                      'rgba(153, 102, 255, 1)',
-                      'rgba(255, 159, 64, 1)'
-                  ],
+                  backgroundColor:'rgba(255, 99, 132, 0.2)',
+                  borderColor: 'rgba(255,99,132,1)',
                   borderWidth: 1
               }]
           },
